grammar.txt
    <program> ::= <stmt>+
       <stmt> ::= <fnDef> | <dataDef> | <typeDecl>
   <typeDecl> ::= "(" ":" <name> <typeSig> ")"
    <dataDef> ::= "(" "data" <name> <constructor>+ ")"
<constructor> ::= <name> | "(" <name> <typeSig>+ ")"
    <typeSig> ::= <name> | "(" "->" <typeSig>+ ")"
      <fnDef> ::= "(" "def" <fnProto> <expr> ")"
    <fnProto> ::= <name> | "(" <name> <name>+ ")"
       <expr> ::= <number> | <name> | "(" <expr>+ ")" | <case>
       <case> ::= "(" "case" <expr> <branch>+ ")"
     <branch> ::= "(" <pattern> <expr> ")"
    <pattern> ::= <name> | "(" <name>+ ")"

       <name> ::= [^0-9:\(\) ][^:\(\) ]+
     <number> ::= [0-9]+
